--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,9 @@
             "src": "/(.*)",
             "dest": "app.py"
         }
-    ]
+    ],
+    "ignoreCommand": "[ \"$VERCEL_ENV\" != production ]",
+    "github": {
+        "silent": true
+    }
 }
